testsuite/tests/typing-short-paths/pr5918.compilers.reference
Line 10, characters 9-19:
10 |  let _ = { a = () }
              ^^^^^^^^^^
Error: Some record fields are undefined: b

